# trainsplorer

./: .dockerignore  .gitignore  .travis.yml  Cargo.toml  Dockerfile  README-HMP.md  README.md  cloudbuild.yaml  cloudbuild.yml  deploy.sh  deploy.yml  docker.sh  docker_base.tar  quick_build.sh  update_base.sh
atoc-msn/: Cargo.toml
darwin-types/: Cargo.toml
doc/: README.md  darwin_activation.md  darwin_and_nrod.md  roadmap.md  schema.md
doc/ops/: README.md  (+2 more)
docker/: osms-db-setup  osms-nrod  osms-web  tspl-base  tspl-builder  tspl-cli  tspl-compiled  tspl-fahrplan  tspl-fahrplan-updater  tspl-nennen  tspl-nrod  tspl-verknupfen  tspl-web  tspl-zugfuhrer
k8s/: faster-storage.yaml  osms-db-sched-init.yaml  osms-db-sched-update.yaml  osms-db-setup-nrod.yaml  osms-db-update.yaml  osms-nrod.yaml  osms-web-svc.yaml  osms-web.yaml  tspl-darwin.yaml  tspl-fahrplan-sched-init.yaml  tspl-fahrplan-updater.yaml  tspl-fahrplan.yaml  tspl-init.yaml  tspl-managed-certificate.yaml  tspl-nrod.yaml  tspl-secrets.yaml.example  tspl-verknupfen.yaml  tspl-web-ingress.yaml  tspl-web.yaml  tspl-zugfuhrer.yaml
national-rail-departures/: Cargo.toml
national-rail-departures/src/: lib.rs  types.rs
ntrod-types/: Cargo.toml
ntrod-types/src/: cif.rs  fns.rs  lib.rs  movements.rs  reference.rs  schedule.rs  vstp.rs
ntrod-types/src/tests/: association_v1.json  mod.rs  movements_0001.json  movements_0002.json  movements_0003.json  movements_0003_2.json  movements_0003_3.json  movements_0003_4.json  movements_0003_5.json  movements_0005.json  movements_various_1.json  movements_various_2.json  movements_various_3.json  movements_various_4.json  schedule_assoc_delete_1.json  schedule_delete_1.json  schedule_v1_2.json  schedule_v1_3.json  schedule_v1_4.json  schedule_v1_5.json  schedule_v1_6.json  timetable_v1.json  tiploc_v1.json  vstp-201806070750.json  vstp_delete_1.json  vstp_intermediate_1.json  vstp_originating_1.json  vstp_pass_1.json  vstp_terminating_1.json  vstp_v1.json
osms-darwin/: Cargo.toml
osms-darwin/src/: conf.rs  main.rs
osms-db/: Cargo.toml
osms-db-setup/: Cargo.toml  config.toml.travis  howto.md  setup-travis.sh
osms-db-setup/src/: config.rs  main.rs  make.rs
osms-db/examples/: import.rs  navigate.rs
osms-db/examples_broken/: navigate.rs
osms-db/migrations/: 0_initial_down.sql  0_initial_up.sql  10_advanced_stations_up.sql  11_schedule_mvt_order_down.sql  11_schedule_mvt_order_up.sql  12_rloc_index_down.sql  12_rloc_index_up.sql  13_schedule_mvt_pfm_etc_up.sql  1_darwin_down.sql  1_darwin_up.sql  2_tne_down.sql  2_tne_up.sql  3_neutral_train_activations_down.sql  3_neutral_train_activations_up.sql  3_station_name_opt_down.sql  3_station_name_opt_up.sql  4_station_name_down.sql  4_station_name_up.sql  4_tmvt_unique_down.sql  4_tmvt_unique_up.sql  5_schedule_del_indexes_down.sql  5_schedule_del_indexes_up.sql  6_darwin_sched_down.sql  6_darwin_sched_up.sql  7_fix_tmvt_unique_down.sql  7_fix_tmvt_unique_up.sql  8_delete_stale_mvts_up.sql  9_delete_useless_mvt_indexes_down.sql  9_delete_useless_mvt_indexes_up.sql
osms-db/src/: db.rs  errors.rs  lib.rs  main.rs  migration.rs  types.rs  util.rs
osms-db/src/migration/: mod.rs  station_name.rs
osms-db/src/ntrod/: live.rs  mod.rs  types.rs
osms-db/src/osm/: make.rs  mod.rs  navigate.rs  org.rs  types.rs
osms-nrod/: Cargo.toml  plugin.sh
osms-nrod/src/: conf.rs  config.rs  darwin.rs  errors.rs  live.rs  main.rs
osms-nrod/src/types/: cif.rs  fns.rs  mod.rs
osms-nrod/src/types/tests/: mod.rs  schedule_v1.json
osms-web/: Cargo.toml  gulpfile.js  package-lock.json  package.json
osms-web/js/: autocomplete.js  main.js
osms-web/sass/: style.scss
osms-web/src/: config.rs  main.rs  mapping.rs  movements.rs  pool.rs  qb.rs  schedule.rs  schedules.rs  sctx.rs  tmpl.rs
osms-web/src/templates/: index.rs  map.rs  mod.rs  movement_search.rs  movements.rs  not_found.rs  schedule.rs  train.rs  user_error.rs
osms-web/static/css/: style.css
osms-web/static/js/: main.js
osms-web/templates/: connections.html.hbs  footer.hbs  footer.html.hbs  header.hbs  header.html.hbs  index.hbs  index.html.hbs  ise.html.hbs  map.html.hbs  movement_search.html.hbs  movements.html.hbs  nav.html.hbs  not_found.html.hbs  orig_dest.html.hbs  overloaded.html.hbs  schedule.html.hbs  schedule_table.html.hbs  schedules.html.hbs  symbols_guide.html.hbs  train.html.hbs  user_error.html.hbs
src/: main.rs
tspl-cli/: Cargo.toml
tspl-fahrplan/: Cargo.toml
tspl-fahrplan-updater/: Cargo.toml  test.txt
tspl-fahrplan/migrations/: 0_initial_up.sql
tspl-fahrplan/src/: config.rs  ctx.rs  dl_scheduler.rs  download.rs  errors.rs  import.rs  lib.rs  main.rs  proto.rs  types.rs  updater.rs
tspl-gcs/: Cargo.toml
tspl-nennen/: Cargo.toml
tspl-nennen/migrations/: 0_initial_up.sql
tspl-nennen/src/: config.rs  corpus.rs  errors.rs  lib.rs  main.rs  msn.rs  types.rs
tspl-nrod/: Cargo.toml
tspl-nrod/src/: config.rs  conn.rs  darwin.rs  errors.rs  main.rs  nrod.rs  worker.rs
tspl-proto/: Cargo.toml
tspl-sqlite/: Cargo.toml
tspl-sqlite/src/: errors.rs  lib.rs  migrations.rs  traits.rs
tspl-verknupfen/: Cargo.toml
tspl-verknupfen/src/: config.rs  ctx.rs  errors.rs  lib.rs  main.rs  types.rs
tspl-web/: Cargo.toml  gulpfile.js  package-lock.json  package.json
tspl-web/js/: autocomplete.js  standard.js
tspl-web/sass/: map.scss
tspl-web/src/: config.rs  ctx.rs  errors.rs  main.rs  movements.rs  suggestions.rs  tmpl.rs  util.rs
tspl-web/src/templates/: index.rs  map.rs  movement_search.rs  movements.rs  not_found.rs  schedule.rs  train.rs  user_error.rs
tspl-web/templates/: footer.html.hbs  index.html.hbs  ise.html.hbs  movements.html.hbs  nav.html.hbs  not_found.html.hbs  schedule.html.hbs  schedules.html.hbs  user_error.html.hbs
tspl-zugfuhrer/: Cargo.toml
tspl-zugfuhrer/migrations/: 0_initial_up.sql  1_indexes_up.sql  2_tmvt_unique_fix_up.sql  3_delete_idx_up.sql  4_mvt_query_idx_up.sql  5_trust_mvt_idx_up.sql
tspl-zugfuhrer/src/: activation.rs  broadcast.rs  config.rs  corpus.rs  ctx.rs  errors.rs  main.rs  types.rs
(+37 files in other folders)
