[package]
authors = ["eeeeeta <eeeeeta@users.noreply.github.com>"]
name = "osm-signal"
version = "0.1.0"

[dependencies]
chrono = "0.4.0"
error-chain = "0.10.0"
geo = "0.4"
hyper = "0.10"
hyper-native-tls = "0.2.4"
indicatif = "0.6"
ordered-float = "0.5.0"
percent-encoding = "1.0.0"
postgis = "0.4.0"
serde = "1.0.11"
serde_derive = "1.0.11"
serde_json = "1.0.2"

[dependencies.postgres]
version = "0.14"
