[workspace]
members = ["./ntrod-types", "./atoc-msn", "./darwin-types", "./tspl-sqlite", "./tspl-fahrplan", "./tspl-util", "./tspl-zugfuhrer", "./tspl-nrod", "./tspl-fahrplan-updater", "./tspl-gcs", "./tspl-verknupfen", "./tspl-nennen"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
debug = true
