[package]
authors = ["eeeeeta <eeeeeta@users.noreply.github.com>"]
name = "national-rail-departures"
version = "0.1.0"
license = "AGPL-3.0 OR MIT OR Apache-2.0"

[dependencies]
chrono = "0.4.0"
error-chain = "0.10.0"
hyper = "0.10"
hyper-native-tls = "0.2.4"
percent-encoding = "1.0.0"
serde = "1.0.11"
serde_derive = "1.0.11"
serde_json = "1.0.2"
