[package]
authors = ["eeeeeta <eeeeeta@users.noreply.github.com>"]
name = "ntrod-types"
version = "0.1.0"

[dependencies]
serde = "1.0.11"
serde_derive = "1.0.11"
smart-default = "0.2.0"

[dependencies.chrono]
features = ["serde"]
version = "0.4"

[dependencies.chrono-tz]
features = ["serde"]
version = "0.4.1"

[dependencies.postgres]
optional = true
version = "0.15"

[dependencies.postgres-derive]
optional = true
version = "0.3"

[dev-dependencies]
serde_json = "1.0"

[features]
postgres-traits = ["postgres-derive", "postgres"]
