[package]
authors = ["eeeeeta <eeeeeta@users.noreply.github.com>"]
name = "ntrod-types"
version = "0.1.0"
license = "AGPL-3.0 OR MIT OR Apache-2.0"

[dependencies]
derive_is_enum_variant = "0.1.1"
serde = "1.0.11"
serde_json = "1.0"
serde_derive = "1.0.70"
smart-default = "0.2.0"

[dependencies.chrono]
features = ["serde"]
version = "0.4"

[dependencies.chrono-tz]
features = ["serde"]
version = "0.4.1"

[dependencies.postgres]
optional = true
version = "0.15"

[dependencies.postgres-derive]
optional = true
version = "0.3"

[features]
postgres-traits = ["postgres-derive", "postgres"]
