[package]
authors = ["eeeeeta <eeeeeta@users.noreply.github.com>"]
name = "osms-db-setup"
version = "0.1.0"

[dependencies]
chrono = "0.4.0"
clap = "~2.29.0"
crossbeam = "0.3.0"
csv = "1.0.0-beta.5"
error-chain = "0.10.0"
failure = "0.1.1"
failure_derive = "0.1.1"
fern = "0.4.2"
flate2 = "0.2.20"
indicatif = "0.7.0"
log = "0.3.8"
osmpbfreader = "0.11.1"
postgis = "0.5"
r2d2 = "0.7.4"
r2d2_postgres = "0.13.0"
reqwest = "0.8.2"
serde = "1.0"
serde_derive = "1.0"
toml = "0.4"

[dependencies.geo]
git = "https://github.com/eeeeeta/rust-geo"

[dependencies.osms-db]
path = "../osms-db"

[dependencies.atoc-msn]
path = "../atoc-msn"

[dependencies.postgres]
features = ["with-native-tls"]
version = "0.15.1"
