[package]
authors = ["eeeeeta <eeeeeta@users.noreply.github.com>"]
name = "osms-db-setup"
version = "0.1.0"

[dependencies]
chrono = "0.4"
clap = "~2.29.0"
crossbeam = "0.3"
csv = "1.0.0-beta.5"
error-chain = "0.10"
failure = "0.1"
failure_derive = "0.1"
fern = "0.4"
flate2 = "0.2"
indicatif = "0.7"
log = "0.3"
osmpbfreader = "0.11"
postgis = "0.5"
r2d2 = "0.7"
r2d2_postgres = "0.13"
reqwest = "0.8"
serde = "1.0"
serde_derive = "1.0"
toml = "0.4"

[dependencies.geo]
git = "https://github.com/eeeeeta/rust-geo"
features = ["postgis-integration"]

[dependencies.osms-db]
path = "../osms-db"

[dependencies.atoc-msn]
path = "../atoc-msn"

[dependencies.postgres]
features = ["with-native-tls"]
version = "0.15"
