[package]
authors = ["eeeeeta <eeeeeta@users.noreply.github.com>"]
license = "AGPL-3.0"
name = "osms-db-setup"
version = "0.1.0"

[dependencies]
chan = "0.1.21"
chrono = "0.4"
clap = "~2.32.0"
crossbeam = "0.4"
csv = "1.0.0-beta.5"
envy = "0.3.2"
failure = "0.1"
failure_derive = "0.1"
fallible-iterator = "0.1.4"
fern = "0.5"
flate2 = "0.2"
indicatif = "0.9"
log = "0.4"
osmpbfreader = "0.12"
postgis = "0.6"
r2d2 = "0.8"
r2d2_postgres = "0.14"
reqwest = "0.8"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0.22"
toml = "0.4"

[dependencies.atoc-msn]
path = "../atoc-msn"

[dependencies.geo]
features = ["postgis-integration", "use-serde"]
version = "0.9"

[dependencies.ntrod-types]
path = "../ntrod-types"

[dependencies.osms-db]
path = "../osms-db"

[dependencies.postgres]
features = ["with-native-tls", "with-serde_json"]
version = "0.15"
