[package]
authors = ["eeeeeta <eeeeeta@users.noreply.github.com>"]
name = "osms-db"
version = "0.1.0"

[dependencies]
chashmap = "2.2"
chrono = "0.4"
crossbeam = "0.3"
failure = "0.1"
failure_derive = "0.1"
fallible-iterator = "0.1"
log = "0.3.8"
ordered-float = "0.5"
osmpbfreader = "0.11"
postgres-derive = "0.3"
r2d2 = "0.7"
r2d2_postgres = "0.13"
serde_json = "1.0"

[dependencies.geo]
git = "https://github.com/eeeeeta/rust-geo"

[dependencies.ntrod-types]
features = ["postgres-traits"]
path = "../ntrod-types"

[dependencies.postgis]
version = "0.5"

[dependencies.postgres]
features = ["with-chrono"]
version = "0.15"

[dev-dependencies]
clap = "2.26"
env_logger = "0.4"
