[package]
authors = ["eeeeeta <eeeeeta@users.noreply.github.com>"]
license = "AGPL-3.0"
name = "osms-db"
version = "0.1.0"

[dependencies]
chrono = "0.4"
crossbeam = "0.3"
failure = "0.1"
failure_derive = "0.1"
fallible-iterator = "0.1"
log = "0.3.8"
ordered-float = "0.5"
postgres-derive = "0.3"
r2d2 = "0.7"
r2d2_postgres = "0.13"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
titlecase = "0.10.0"

[dependencies.geo]
features = ["postgis-integration", "use-serde"]
version = "0.9"

[dependencies.ntrod-types]
features = ["postgres-traits"]
path = "../ntrod-types"

[dependencies.postgis]
version = "0.6"

[dependencies.postgres]
features = ["with-chrono", "with-serde_json"]
version = "0.15"

[dev-dependencies]
clap = "2.26"
env_logger = "0.4"
