[package]
authors = ["eeeeeta <eeeeeta@users.noreply.github.com>"]
name = "osms-nrod"
version = "0.1.0"

[dependencies]
clap = "2.26.0"
failure = "0.1.1"
failure_derive = "0.1"
fern = "0.4"
futures = "0.1.17"
log = "0.3.8"
postgres = "0.15"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
tokio-core = "0.1.11"
toml = "0.4"

[dependencies.ntrod-types]
path = "../ntrod-types"

[dependencies.osms-db]
path = "../osms-db"

[dependencies.stomp]
git = "https://github.com/eeeeeta/stomp-rs"
