[package]
authors = ["eeeeeta <eeeeeta@users.noreply.github.com>"]
name = "osms-nrod"
version = "0.1.0"
license = "AGPL-3.0"

[dependencies]
cadence = "0.12.2"
chrono = "0.4.0"
clap = "2.32.0"
crossbeam-channel = "0.1.3"
failure = "0.1.1"
failure_derive = "0.1"
fern = "0.4"
flate2 = "1.0.1"
futures = "0.1.17"
log = "0.4.1"
nom = "3.2.1"
postgres = "0.15"
r2d2 = "0.8.2"
r2d2_postgres = "0.14.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
tokio-core = "0.1.11"
toml = "0.4"

[dependencies.darwin-types]
path = "../darwin-types"

[dependencies.ntrod-types]
path = "../ntrod-types"

[dependencies.osms-db]
path = "../osms-db"

[dependencies.stomp]
git = "https://github.com/eeeeeta/stomp-rs"
