[package]
authors = ["eeeeeta <eeeeeta@users.noreply.github.com>"]
name = "osms-nrod"
version = "0.1.0"
license = "AGPL-3.0"

[dependencies]
cadence = "0.15"
chrono = "0.4.0"
clap = "2.32"
crossbeam-channel = "0.2"
failure = "0.1"
failure_derive = "0.1"
fern = "0.5"
flate2 = "1.0"
futures = "0.1"
log = "0.4"
postgres = "0.15"
r2d2 = "0.8"
r2d2_postgres = "0.14"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
tokio-core = "0.1"
toml = "0.4"

[dependencies.darwin-types]
path = "../darwin-types"

[dependencies.ntrod-types]
path = "../ntrod-types"

[dependencies.osms-db]
path = "../osms-db"

[dependencies.stomp]
git = "https://github.com/eeeeeta/stomp-rs"
