[package]
authors = ["eeeeeta <eeeeeta@users.noreply.github.com>"]
edition = "2018"
name = "tspl-fahrplan"
version = "0.1.0"

[dependencies]
bitflags = "1.0.4"
chrono = "0.4"
failure = "0.1"
failure_derive = "0.1"
flate2 = "1.0.7"
is_sorted = "0.1.1"
log = "0.4"
nng = "0.4.0"
reqwest = "0.9.15"
rmp-serde = "0.13.7"
serde = "1.0.90"
serde_derive = "1.0.90"
serde_json = "1.0.39"

[dependencies.ntrod-types]
path = "../ntrod-types"

[dependencies.tspl-sqlite]
path = "../tspl-sqlite"

[dependencies.tspl-util]
path = "../tspl-util"

[dependencies.tspl-proto]
path = "../tspl-proto"
