[package]
authors = ["eeeeeta <eeeeeta@users.noreply.github.com>"]
edition = "2018"
name = "tspl-fahrplan"
version = "0.1.0"

[dependencies]
bitflags = "1.0"
chrono = "0.4"
failure = "0.1"
failure_derive = "0.1"
log = "0.4"
reqwest = "0.9"
rouille = "3.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

[dependencies.ntrod-types]
path = "../ntrod-types"

[dependencies.tspl-gcs]
path = "../tspl-gcs"

[dependencies.tspl-sqlite]
path = "../tspl-sqlite"

[dependencies.tspl-util]
path = "../tspl-util"
