[package]
name = "tspl-nennen"
version = "0.1.0"
authors = ["eta <hi@theta.eu.org>"]
edition = "2018"

[dependencies]
titlecase = "0.10"
failure = "0.1"
failure_derive = "0.1"
log = "0.4"
reqwest = "0.9"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

[dependencies.atoc-msn]
path = "../atoc-msn"

[dependencies.ntrod-types]
path = "../ntrod-types"

[dependencies.tspl-gcs]
path = "../tspl-gcs"

[dependencies.tspl-sqlite]
path = "../tspl-sqlite"

[dependencies.tspl-util]
path = "../tspl-util"
