[package]
authors = ["eeeeeta <eeeeeta@users.noreply.github.com>"]
edition = "2018"
name = "tspl-sqlite"
version = "0.1.0"

[dependencies]
chrono = "0.4"
failure = "0.1"
failure_derive = "0.1"
log = "0.4"
r2d2 = "0.8.4"

[dependencies.rusqlite]
features = ["blob", "chrono", "uuid"]
git = "https://github.com/jgallagher/rusqlite"

[dependencies.tspl-util]
path = "../tspl-util"

[dependencies.uuid]
features = ["serde", "v4"]
version = "0.7"
