[package]
name = "tspl-web"
version = "0.1.0"
authors = ["eta <hi@theta.eu.org>"]
edition = "2018"

[dependencies]
chrono = "0.4"
failure = "0.1"
failure_derive = "0.1"
handlebars = "2.0"
log = "0.4"
rayon = "1.2"
reqwest = "0.9"
rouille = "3.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

[dependencies.tspl-gcs]
path = "../tspl-gcs"

[dependencies.tspl-sqlite]
path = "../tspl-sqlite"

[dependencies.tspl-fahrplan]
path = "../tspl-fahrplan"

[dependencies.tspl-verknupfen]
path = "../tspl-verknupfen"

[dependencies.tspl-zugfuhrer]
path = "../tspl-zugfuhrer"

[dependencies.tspl-nennen]
path = "../tspl-nennen"

[dependencies.tspl-util]
path = "../tspl-util"
