[package]
name = "tspl-zugfuhrer"
version = "0.1.0"
authors = ["eta <hi@theta.eu.org>"]
edition = "2018"

[dependencies]
chrono = "0.4"
crossbeam-channel = "0.3"
failure = "0.1"
failure_derive = "0.1"
log = "0.4"
reqwest = "0.9"
rouille = "3.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

[dependencies.ntrod-types]
path = "../ntrod-types"

[dependencies.tspl-sqlite]
path = "../tspl-sqlite"

[dependencies.tspl-fahrplan]
path = "../tspl-fahrplan"

[dependencies.tspl-util]
path = "../tspl-util"
